add how to play view

--- a/MaiInHerLoop/Resources/Localizable/en.lproj/Localizable.strings
+++ b/MaiInHerLoop/Resources/Localizable/en.lproj/Localizable.strings
@@ -16,7 +16,7 @@
 "home.title.vi" = "THAN HỒNG";
 "home.title.a11y" = "Red Embers — Than Hồng";
 "home.start_game" = "Start Game";
-"home.visit_regions" = "Visit Regions";
+"home.how_to_play" = "How To Play";
 "home.diary" = "Diary";
 "home.howtoplay" = "How to play";
 "home.howtoplay.hint" = "Opens a guide on how to play";
