--- a/MaiInHerLoop/Resources/Localizable/vi.lproj/Localizable.strings
+++ b/MaiInHerLoop/Resources/Localizable/vi.lproj/Localizable.strings
@@ -16,9 +16,8 @@
 "home.title.vi" = "THAN HỒNG";
 "home.title.a11y" = "Red Embers — Than Hồng";
 "home.start_game" = "Bắt Đầu";
-"home.visit_regions" = "Khám Phá Vùng";
 "home.diary" = "Nhật Ký";
-"home.howtoplay" = "Cách chơi";
+"home.how_to_play" = "Hướng Dẫn";
 "home.howtoplay.hint" = "Mở hướng dẫn chơi";
 
 
